@@ -14,6 +14,14 @@ configurations {
 	}
 }
 
+bootRun{
+	jvmArgs=['-Xlog:codecache+sweep*=trace,class+unload,class+load,os+thread,safepoint,gc*,gc+stringdedup=debug,gc+ergo=trace,gc+age=trace,gc+phases=trace,gc+humongous=trace,jit+compilation=debug:file=/home/mw/thread_dump/app.log:level,tags,time,uptime:filesize=104857600,filecount=5']
+
+}
+/*tasks.withType(JavaCompile){
+	options.compilerArgs+=['-XX:+PrintGCDetails','-Xlogoggc:./gc.log']
+}*/
+
 repositories {
 	mavenCentral()
 }
@@ -37,3 +45,4 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
